CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(agentcam)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")

FIND_PACKAGE(Lua REQUIRED)
FIND_PACKAGE(Boost COMPONENTS program_options system REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")

ADD_LIBRARY(polyclipping STATIC clipper.cpp)
SET_TARGET_PROPERTIES(polyclipping PROPERTIES VERSION 19.0.0 SOVERSION 19)

INCLUDE_DIRECTORIES(
    ${LUA_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE(agentcam agentcam.cpp)
TARGET_LINK_LIBRARIES(agentcam 
    ${LUA_LIBRARIES}
    ${Boost_LIBRARIES}
    polyclipping
)
